Header not showing in hosted version fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -366,8 +366,6 @@ main div#main {
   padding: 5%;
   background-color: black;
   color: white;
-  background: url("../../images/Night_City1.png") no-repeat center fixed;
-  background-size: cover;
 }
 main div#main h1.header-content {
   font-size: 5rem;
